# LSKV

./: .clang-format  .devcontainer.json  .dockerignore  .gitignore  .gitmodules  .rsync-filter  0001-etcd-patches.patch  BENCHMARKING.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.bench  Dockerfile.benchmark  Dockerfile.ignore  Dockerfile.sgx  Dockerfile.virtual  Makefile  Manifest.toml  Project.toml  README.md  aci.json  analysis.ipynb  benchark.sh  benchmark.py  benchmark.sh  ccf_watches.patch  certs.py  cgmanifest.json  demo.py  etcdctl.sh  flake.nix  integration-tests.sh  k6.sh  lskv_cluster.py  oe_sign.conf  openapi.json  openapi.yaml  out_parser.py  receipts.sh  requirements.txt  (+2 more)
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  check-issues.yaml  ci-checks.yml  ci.yml  pr-assignee.yml  publish-latest.yml  publish-release.yml
.tours/: sample-cpp-app.tour
bencher/: Cargo.toml  build.rs
bencher/src/: args.rs  lib.rs  main.rs  protos.rs  ycsb.rs
benchmark/: all.py  analysis.py  certs.py  ci.py  commit-latency-analysis.ipynb  common.py  distributed.py  etcd-analysis.ipynb  etcd-cluster.py  etcd.py  etcd_cluster.py  generator.py  get_ips.yaml  k6-analysis.ipynb  k6.js  k6.py  local.py  lskv_cluster.py  perf-analysis.ipynb  perf_system.py  piccolo_generate.py  receipt_verify.py  setup_nodes.yaml  stores.py  values.yaml  ycsb-analysis.ipynb  ycsb.py
benchmark/distributed/: get_ips.yaml  setup_nodes.yaml  values.yaml
benchmark/distributed/files/: ccf-binary-dir.diff
benchmark/go-ycsb/workloads/: workloada  workloadb  workloadc  workloadd  workloade  workloadf
certs-config/: ca-config.json  client.json  server.json
cmake/: protobuf.cmake  version.cmake
config/: cchost_config.json  cchost_config.sgx.json  cchost_config.virtual.json
constitution/: actions.js  apply.js  resolve.js  validate.js
docs/: index.md  receipts.md
experiments/: Cargo.toml  flake.nix  plot.jl
experiments/src/: main.rs  stores.rs  ycsb.rs
experiments/src/stores/: etcd.rs  lskv.rs
nix/: README.md  apply_lvi_mitigation.cmake  az-dcap.nix  ccf-sandbox.nix  ccf-sandbox.sh  ccf.nix  ci-checks.nix  default.nix  install_lvi_mitigation_bindir  invoke_compiler  k6.nix  lib.nix  lskv-sandbox.nix  lskv.nix  lvi-mitigation.nix  openenclave.nix  sgx-dcap.nix
nix/patches/: ccf-ignore-submitter.diff  ccf-no-python-pb2.diff  ccf-no-python.diff  ccf-protoc-binary.diff  crypto39.diff  openenclave-pkgconfig.diff  openenclave.diff  versionifier.diff
nix/python/: adtk.nix  better-exceptions.nix  ccf_infra_setup.py  cimetrics.nix  columnar.nix  cose.nix  pycose.nix  pyright.nix  python-ccf-infra.nix  python-ccf.nix  string-color.nix  types-paramiko.nix
patches/: 0001-etcd-patches.patch  0001-etcd-test-updates.patch  etcd-test-updates.patch  k6-micro.diff
proto/: CMakeLists.txt  build.sh  etcd.proto  lskvserver.proto  status.proto
python/: governance.py  pyproject.toml
python/lskv/: etcd_pb2.py  etcd_pb2.pyi  etcd_pb2_grpc.py  governance.py  lskvserver_pb2.py  lskvserver_pb2.pyi  status_pb2.py  status_pb2.pyi
python/lskv/google/api/: annotations_pb2.pyi  http_pb2.pyi
scripts/: check-cmake-format.sh  check-format.sh  check-issues.sh  check-todo.sh  ci-checks.sh  notice-check.py  notice_check.py
src/app/: app.cpp  exceptions.h  grpc.h  grpc_status.h  index.cpp  index.h  json.cpp  json.h  json_grpc.h  kvstore.cpp  kvstore.h  leases.cpp  leases.h  node_data.h  openapi.h  service_data.cpp  service_data.h  watches.cpp  watches.h
tests/: common.py  test_common.py  test_single.py
