[package]
name = "bencher"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.4.2", features = ["derive"] }
csv = "1.2.2"
loadbench = { git = "https://github.com/jeffa5/loadbench", branch = "main" }
prost = "0.12.0"
prost-types = "0.12.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.10.0", features = ["transport", "tls"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.10.0"
