[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.4.2", features = ["derive"] }
exp = { git = "https://github.com/jeffa5/exp", branch = "main" }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
futures-util = "0.3.28"
bollard = "0.12.0"
nix = { version = "0.27.1", features = ["signal"] }
reqwest = { version = "0.11.20", features = ["json"] }
polars = { version = "0.32.0", features = ["lazy", "diagonal_concat"] }
csv = { git = "https://github.com/gootorov/rust-csv", branch = "serde-flatten" }
